recfactor tests